# Book_tg_bot

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
bot/: BookStates.py  config.py  test_bot.py  tg_bot.py
