[tool.poetry]
name = "Book_tg_bot"
version = "0.1.0"
description = ""
authors = ["Kirill <kirillpozmogov017@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
